# aggregate_server

./: CLAUDE.md  LICENSE  PROJECT_CONTEXT.md  README.md  config.yaml  dashboard.py  pyproject.toml
aggregate_server/: __main__.py  config.py  dispatcher.py  forwarder.py  health.py  log_writer.py  models.py  registry.py  router.py
dashboard/: app.py  charts.py  data.py  regression.py
data/logs/: 2026-06-07.db  2026-06-09.db
docs/superpowers/plans/: 2026-06-07-sqlite-logging-dashboard.md  2026-06-09-multi-model-aliases.md  2026-06-09-starry-karp.md
docs/superpowers/specs/: 2026-06-07-sqlite-logging-dashboard-design.md  2026-06-09-multi-model-aliases-design.md  2026-06-09-starry-karp-test-script-design.md
scripts/: starry_karp.py
tests/: conftest.py  test_config.py  test_dashboard_data.py  test_dashboard_regression.py  test_dispatcher.py  test_dispatcher_logging.py  test_forwarder.py  test_log_writer.py  test_registry.py  test_router.py  test_starry_karp_verifier.py
